--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "@types/mongodb": "^3.5.25",
+    "mongodb": "^3.5.9"
+  },
   "devDependencies": {
     "@types/node": "^14.0.13"
   },
   "scripts": {
-    "start": "node Aufgabe09/Server.js"
+    "start": "node Aufgabe11/Server.js"
   },
   "repository": {
     "type": "git",
