--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/node": "^14.0.13"
   },
   "scripts": {
-    "start": "node Aufgabe11/Server.js"
+    "start": "node Eismanufaktur/Server.js"
   },
   "repository": {
     "type": "git",
